name: hakyll-diagrams
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright 2015 Corentin Dupont
maintainer: corentin.dupont@gmail.com
synopsis: Include images in blog posts with inline diagrams code
description:
    A plugin for @Hakyll@ which turns inline diagrams code into images.
category: Web
author: Corentin Dupont
extra-source-files:
    CHANGES

source-repository head
    type: git
    location: git://github.com/cdupont/hakyll-diagrams.git

library
    build-depends:
        base,
        containers,
        filepath,
        directory,
        hakyll,
        diagrams-lib,
        diagrams-rasterific,
        JuicyPixels,
        diagrams-builder,
        pandoc,
        safe,
        parsec,
        diagrams-pandoc
    exposed-modules:
        Hakyll.Web.Diagrams
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
